# coo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  lefthook.yml
.github/workflows/: ci.yml
src/: agent.rs  lib.rs  main.rs  message.rs  skill.rs
src/provider/: anthropic.rs  coo.rs  meow.rs  mod.rs
src/tools/: agent_tool.rs  bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  send_message.rs  skill_tool.rs  web_fetch.rs  write.rs
tests/: integration_test.rs
