[package]
name = "coo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22.1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
getrandom = "0.3"
glob = "0.3"
htmd = "0.5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
